--- a/gsap/parallaxquiz/index.html
+++ b/gsap/parallaxquiz/index.html
@@ -4,65 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="index.css" />
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollToPlugin.min.js"></script>
     <script src="index.js" defer></script>
-    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <section class="first">
-      <article class="album">
+    <section id="first">
+      <figure class="album">
         <img
-          src="
-            https://webstoryboy.github.io/gsap2023/assets/img/images14.jpg"
+          src="https://webstoryboy.github.io/gsap2023/assets/img/images14.jpg"
           alt=""
         />
-      </article>
+      </figure>
+      <div class="num">1</div>
     </section>
-    <section class="second">
-      <article>
-        <img
-          src="https://webstoryboy.github.io/gsap2023/assets/img/images15.jpg"
-          alt=""
-        />
-        <img
-          src="https://webstoryboy.github.io/gsap2023/assets/img/images15.jpg"
-          alt=""
-        />
-        <img
-          src="https://webstoryboy.github.io/gsap2023/assets/img/images15.jpg"
-          alt=""
-        />
-      </article>
+    <section>
+      <div class="num">2</div>
     </section>
-    <section class="third">
-      <article>
-        <img
-          src="
-          https://webstoryboy.github.io/gsap2023/assets/img/images03.jpg"
-          alt=""
-        />
-        <img
-          src="
-        https://webstoryboy.github.io/gsap2023/assets/img/images03.jpg"
-          alt=""
-        />
-        <img
-          src="
-      https://webstoryboy.github.io/gsap2023/assets/img/images03.jpg"
-          alt=""
-        />
-        <img
-          src="
-    https://webstoryboy.github.io/gsap2023/assets/img/images03.jpg"
-          alt=""
-        />
-        <img
-          src="
-  https://webstoryboy.github.io/gsap2023/assets/img/images03.jpg"
-          alt=""
-        />
-      </article>
+    <section>
+      <div class="num">3</div>
     </section>
   </body>
 </html>
